Add water level and tidal data ingestion to notebook.

--- a/notebooks/data_ingestion.ipynb
+++ b/notebooks/data_ingestion.ipynb
@@ -467,7 +467,7 @@
    "id": "0ec82d9d-5663-4dff-8ed7-6624ff8b0668",
    "metadata": {},
    "source": [
-    "# Water Data\n",
+    "# Water temperature and discharge rate data\n",
     "\n",
     "Water data is retrieved using the USGS's data retrieval package.\n",
     "\n",
@@ -1225,6 +1225,80 @@
     "water_df = pd.merge(water_temp_df, water_discharge_df, on='date', how='outer')\n",
     "water_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09b63637-986f-46ae-94bf-067d79c688dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f640317-25fb-476b-88e3-ab47a4b76ade",
+   "metadata": {},
+   "source": [
+    "# Water level/tidal data\n",
+    "\n",
+    "<u>NOAA water level data</u>:\n",
+    "<br>https://tidesandcurrents.noaa.gov/waterlevels.html?id=9455760\n",
+    "\n",
+    "<u>NOAA API documentation</u>:\n",
+    "<br>https://tidesandcurrents.noaa.gov/web_services_info.html\n",
+    "<br>https://api.tidesandcurrents.noaa.gov/api/prod/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "59fd2c46-5f3d-485b-af66-b060865ee982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NOAA's station in Nikiski, AK is the nearest to the Kenai River mouth\n",
+    "noaa_station_id = 9455760"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee61afd3-8ce6-4e83-aee4-aa00a98d2ff9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "297067e0-20a1-40eb-bf30-52b79ed837d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad6d6af7-2abe-403a-873b-7e38ce0dbbbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71e70b66-e40d-4b2d-b610-fc842112972d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "233057d4-dae6-45c5-b093-b737756bb0bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
