Add tidal/water level data

--- a/notebooks/data_ingestion.ipynb
+++ b/notebooks/data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "a9f5aca0-2220-44e7-8bb5-10b79dce3525",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "79c98db0-1a84-454c-8e07-15bb74420a1d",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "1975fe4f-10ce-493b-9183-8fde96bfc1d3",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "4  Kenai River (late-run sockeye)  Sockeye  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "77ac108b-6117-4177-ad2b-0f965296103f",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "max                40.0                             NaN      NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "480eb7d8-3a78-408f-9f66-da44930ca2d0",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
        "4  2024  July, 05 2024 00:00:00       18120"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "bbfede76-faf1-4760-8e33-170804651c71",
    "metadata": {},
    "outputs": [],
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "a2259fc2-feb3-4bd5-bd7a-e6361571f585",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
        "0            NaN           NaN         NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "be3458dd-1d7b-4fc2-aaf0-0f72ef50997f",
    "metadata": {},
    "outputs": [],
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "13b0cc67-c493-4aed-9e0b-52e8c9800d76",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
        "2015-01-05 00:00:00+00:00             A  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "df9e5000-c095-48f2-ba23-f47e47d1e064",
    "metadata": {},
    "outputs": [
@@ -908,7 +908,7 @@
        "4 2015-01-05 00:00:00+00:00             0.0             0.0              0.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "0c593a65-dab1-4a30-b721-542c8b76b221",
    "metadata": {},
    "outputs": [
@@ -1020,7 +1020,7 @@
        "2015-01-05 00:00:00+00:00  15266300      2350.0          A, e"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "434b20d0-3512-41e2-9530-5b0368b1628a",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
        "4 2015-01-05 00:00:00+00:00                2350.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "0e72247a-7698-4500-9cf3-6cfebfb3a3b6",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1215,7 @@
        "4                2350.0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,23 +1246,44 @@
     "\n",
     "<u>NOAA API documentation</u>:\n",
     "<br>https://tidesandcurrents.noaa.gov/web_services_info.html\n",
-    "<br>https://api.tidesandcurrents.noaa.gov/api/prod/"
+    "<br>https://api.tidesandcurrents.noaa.gov/api/prod/\n",
+    "<br><a href=\"https://github.com/NOAA-CO-OPS/Coastal_Hazards_Example_Notebooks/blob/main/CO-OPS_API_Example_Notebook_HurricaneIan/CO-OPS_API_Example_Notebook_HurricaneIan.ipynb\">Example notebook for data retrieval via CO-OPS API</a>\n",
+    "<br><a href=\"https://tidesandcurrents.noaa.gov/datum_options.html\">Datum options</a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "id": "59fd2c46-5f3d-485b-af66-b060865ee982",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://api.tidesandcurrents.noaa.gov/api/prod/datagetter?begin_date=20150101&end_date=20241231&station=9455760&product=water_level&datum=MHHW&time_zone=lst&units=english&format=json#api'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# NOAA's station in Nikiski, AK is the nearest to the Kenai River mouth\n",
-    "noaa_station_id = 9455760"
+    "noaa_station_id = '9455760'\n",
+    "time_zone = 'lst'\n",
+    "datum = 'MHHW'\n",
+    "units = 'english'\n",
+    "start_date = str(start_year) + '0101'\n",
+    "end_date = str(end_year) + '1231'\n",
+    "\n",
+    "noaa_api = 'https://api.tidesandcurrents.noaa.gov/api/prod/datagetter?begin_date='+start_date+'&end_date='+end_date+'&station='+noaa_station_id+'&product=water_level&datum='+datum+'&time_zone='+time_zone+'&units='+units+'&format=json#api'\n",
+    "noaa_api"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "ee61afd3-8ce6-4e83-aee4-aa00a98d2ff9",
    "metadata": {},
    "outputs": [],
