Working on sea level data ingestion.

--- a/notebooks/data_ingestion.ipynb
+++ b/notebooks/data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 105,
    "id": "a9f5aca0-2220-44e7-8bb5-10b79dce3525",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 106,
    "id": "79c98db0-1a84-454c-8e07-15bb74420a1d",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 107,
    "id": "1975fe4f-10ce-493b-9183-8fde96bfc1d3",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "4  Kenai River (late-run sockeye)  Sockeye  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 108,
    "id": "77ac108b-6117-4177-ad2b-0f965296103f",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "    <tr>\n",
        "      <th>top</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>July, 01 2024 00:00:00</td>\n",
+       "      <td>August, 26 2015 00:00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -323,18 +323,18 @@
        "</div>"
       ],
       "text/plain": [
-       "               YEAR               COUNTDATE      FISHCOUNT  SPECIESID  \\\n",
-       "count    528.000000                     528     528.000000      528.0   \n",
-       "unique          NaN                     528            NaN        NaN   \n",
-       "top             NaN  July, 01 2024 00:00:00            NaN        NaN   \n",
-       "freq            NaN                       1            NaN        NaN   \n",
-       "mean    2019.376894                     NaN   32741.606061      420.0   \n",
-       "std        2.831109                     NaN   28706.330094        0.0   \n",
-       "min     2015.000000                     NaN    1436.000000      420.0   \n",
-       "25%     2017.000000                     NaN   13990.500000      420.0   \n",
-       "50%     2019.000000                     NaN   25421.500000      420.0   \n",
-       "75%     2022.000000                     NaN   41381.000000      420.0   \n",
-       "max     2024.000000                     NaN  195029.000000      420.0   \n",
+       "               YEAR                 COUNTDATE      FISHCOUNT  SPECIESID  \\\n",
+       "count    528.000000                       528     528.000000      528.0   \n",
+       "unique          NaN                       528            NaN        NaN   \n",
+       "top             NaN  August, 26 2015 00:00:00            NaN        NaN   \n",
+       "freq            NaN                         1            NaN        NaN   \n",
+       "mean    2019.376894                       NaN   32741.606061      420.0   \n",
+       "std        2.831109                       NaN   28706.330094        0.0   \n",
+       "min     2015.000000                       NaN    1436.000000      420.0   \n",
+       "25%     2017.000000                       NaN   13990.500000      420.0   \n",
+       "50%     2019.000000                       NaN   25421.500000      420.0   \n",
+       "75%     2022.000000                       NaN   41381.000000      420.0   \n",
+       "max     2024.000000                       NaN  195029.000000      420.0   \n",
        "\n",
        "        COUNTLOCATIONID                   COUNTLOCATION  SPECIES  \n",
        "count             528.0                             528      528  \n",
@@ -350,7 +350,7 @@
        "max                40.0                             NaN      NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 109,
    "id": "480eb7d8-3a78-408f-9f66-da44930ca2d0",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
        "4  2024  July, 05 2024 00:00:00       18120"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 110,
    "id": "bbfede76-faf1-4760-8e33-170804651c71",
    "metadata": {},
    "outputs": [],
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 111,
    "id": "a2259fc2-feb3-4bd5-bd7a-e6361571f585",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
        "0            NaN           NaN         NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 112,
    "id": "be3458dd-1d7b-4fc2-aaf0-0f72ef50997f",
    "metadata": {},
    "outputs": [],
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 113,
    "id": "13b0cc67-c493-4aed-9e0b-52e8c9800d76",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
        "2015-01-05 00:00:00+00:00             A  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 114,
    "id": "df9e5000-c095-48f2-ba23-f47e47d1e064",
    "metadata": {},
    "outputs": [
@@ -908,7 +908,7 @@
        "4 2015-01-05 00:00:00+00:00             0.0             0.0              0.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 115,
    "id": "0c593a65-dab1-4a30-b721-542c8b76b221",
    "metadata": {},
    "outputs": [
@@ -1020,7 +1020,7 @@
        "2015-01-05 00:00:00+00:00  15266300      2350.0          A, e"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 116,
    "id": "434b20d0-3512-41e2-9530-5b0368b1628a",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
        "4 2015-01-05 00:00:00+00:00                2350.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 117,
    "id": "0e72247a-7698-4500-9cf3-6cfebfb3a3b6",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1215,7 @@
        "4                2350.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,70 +1253,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 118,
    "id": "59fd2c46-5f3d-485b-af66-b060865ee982",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://api.tidesandcurrents.noaa.gov/api/prod/datagetter?begin_date=20150101&end_date=20241231&station=9455760&product=water_level&datum=MHHW&time_zone=lst&units=english&format=json#api'"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# NOAA's station in Nikiski, AK is the nearest to the Kenai River mouth\n",
-    "noaa_station_id = '9455760'\n",
-    "time_zone = 'lst'\n",
-    "datum = 'MHHW'\n",
-    "units = 'english'\n",
-    "start_date = str(start_year) + '0101'\n",
-    "end_date = str(end_year) + '1231'\n",
+    "# # NOAA's station in Nikiski, AK is the nearest to the Kenai River mouth\n",
+    "# noaa_station_id = '9455760'\n",
+    "# time_zone = 'lst'\n",
+    "# datum = 'MSL'\n",
+    "# units = 'english'\n",
+    "# # start_date = str(start_year) + '0101'\n",
+    "# # end_date = str(end_year) + '1231'\n",
+    "# start_date = '20241201'\n",
+    "# end_date = '20241231'\n",
     "\n",
-    "noaa_api = 'https://api.tidesandcurrents.noaa.gov/api/prod/datagetter?begin_date='+start_date+'&end_date='+end_date+'&station='+noaa_station_id+'&product=water_level&datum='+datum+'&time_zone='+time_zone+'&units='+units+'&format=json#api'\n",
-    "noaa_api"
+    "# noaa_api = 'https://api.tidesandcurrents.noaa.gov/api/prod/datagetter?begin_date='+start_date+'&end_date='+end_date+'&station='+noaa_station_id+'&product=water_level&datum='+datum+'&time_zone='+time_zone+'&units='+units+'&format=json#api'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "ee61afd3-8ce6-4e83-aee4-aa00a98d2ff9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "297067e0-20a1-40eb-bf30-52b79ed837d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad6d6af7-2abe-403a-873b-7e38ce0dbbbb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71e70b66-e40d-4b2d-b610-fc842112972d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "233057d4-dae6-45c5-b093-b737756bb0bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "# Parameters\n",
+    "noaa_station_id = '9455760'\n",
+    "time_zone = 'lst'\n",
+    "datum = 'MSL' # mean sea level (see link above for dataum options)\n",
+    "language = 'english'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "e1fad4fc-0acf-4b11-a599-6c173e35d25e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to retrieve and process NOAA data for a set date\n",
+    "# If API request is successful, this function returns data in a list (which can be appended with a loop)\n",
+    "def fetch_daily_sea_levels(month_start):\n",
+    "    # Format the start and end date for the API request\n",
+    "    start_date_str = month_start.strftime('%Y%m%d')\n",
+    "    end_date_str = (month_start + pd.offsets.MonthEnd(0)).strftime('%Y%m%d')\n",
+    "    \n",
+    "    # Construct the NOAA API URL\n",
+    "    noaa_api = f'https://api.tidesandcurrents.noaa.gov/api/prod/datagetter?begin_date={start_date_str}&end_date={end_date_str}&station={noaa_station_id}&product=water_level&datum={datum}&time_zone={time_zone}&units={language}&format=json'\n",
+    "    \n",
+    "    # Request data from NOAA\n",
+    "    noaa_response = requests.get(noaa_api)\n",
+    "    \n",
+    "    if noaa_response.status_code == 200:\n",
+    "        data = []\n",
+    "        noaa_json = noaa_response.json()\n",
+    "        # Extract the water level data (for the current day)\n",
+    "        for record in noaa_json['data']:\n",
+    "            data.append({\n",
+    "                'timestamp': record['t'],\n",
+    "                'sea_level': float(record['v'])\n",
+    "            })\n",
+    "        return data\n",
+    "    else:\n",
+    "        print(f\"Failed to fetch NOAA data for month ending {month_start + pd.offsets.MonthEnd(0)}: {noaa_response.status_code}, {noaa_response.text}\")\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "efe18c10-a6f0-475b-a4b4-4e05c623b381",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[121], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m current_month \u001b[38;5;241m=\u001b[39m datetime(start_year, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m current_month \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m datetime(end_year, \u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m---> 12\u001b[0m     current_month_data \u001b[38;5;241m=\u001b[39m fetch_daily_sea_levels(current_month)\n\u001b[0;32m     13\u001b[0m     current_month_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(current_month_data)\n\u001b[0;32m     15\u001b[0m     current_month_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(current_month_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtimestamp\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "Cell \u001b[1;32mIn[120], line 21\u001b[0m, in \u001b[0;36mfetch_daily_sea_levels\u001b[1;34m(month_start)\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;66;03m# Extract the water level data (for the current day)\u001b[39;00m\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m record \u001b[38;5;129;01min\u001b[39;00m noaa_json[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[0;32m     19\u001b[0m         data\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m     20\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtimestamp\u001b[39m\u001b[38;5;124m'\u001b[39m: record[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m---> 21\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msea_level\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mfloat\u001b[39m(record[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mv\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     22\u001b[0m         })\n\u001b[0;32m     23\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m data\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
+     ]
+    }
+   ],
+   "source": [
+    "# List to store results\n",
+    "sea_level_df = pd.DataFrame({\n",
+    "    'date': [],\n",
+    "    'min': [],\n",
+    "    'max': []\n",
+    "})\n",
+    "\n",
+    "# Start of month date for the loop\n",
+    "current_month = datetime(start_year, 1, 1)\n",
+    "\n",
+    "while current_month <= datetime(end_year, 12, 1):\n",
+    "    current_month_data = fetch_daily_sea_levels(current_month)\n",
+    "    current_month_df = pd.DataFrame(current_month_data)\n",
+    "    \n",
+    "    current_month_df['date'] = pd.to_datetime(current_month_df['timestamp'])\n",
+    "    current_month_df = current_month_df.groupby(current_month_df['date'].dt.date)['sea_level'].agg(['min','max']).reset_index()\n",
+    "    \n",
+    "    sea_level_df = pd.concat([sea_level_df, current_month_df], ignore_index=True)\n",
+    "    current_month = current_month + pd.DateOffset(months=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edc14b7f-9265-4ac3-a41c-531a5f27913d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sea_level_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19e38b98-2b5a-48db-b001-4d42d8034aa7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "348a8561-9e42-489d-8b7d-54875cb91c86",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa5ca4aa-5315-40cb-ac1a-cf2521015d8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3952b077-008f-43a0-9e24-3ff28f44b61f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82ab96ef-cfc0-4e54-8c20-90ff9a72ec2a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1391,8 +1483,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f54f9ef5-b38c-48a1-ad90-b13db7daedf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tyler\\anaconda3\\envs\\kenai-salmon-env\\python.exe\n",
+      "C:\\Users\\tyler\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe\n",
+      "C:\\Users\\tyler\\Anaconda3\\python.exe\n"
+     ]
+    }
+   ],
+   "source": [
+    "!where python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5da20b57-493d-4c82-8a90-b2105a1f132d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tyler\\anaconda3\\envs\\kenai-salmon-env\\python.exe\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.executable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49145d35-7942-4ef2-a2c7-914f0fb83e40",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1400,9 +1531,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (kenai-salmon-env)",
    "language": "python",
-   "name": "python3"
+   "name": "kenai-salmon-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1414,7 +1545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
