--- a/notebooks/data_ingestion.ipynb
+++ b/notebooks/data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 18,
    "id": "a9f5aca0-2220-44e7-8bb5-10b79dce3525",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "id": "79c98db0-1a84-454c-8e07-15bb74420a1d",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "id": "1975fe4f-10ce-493b-9183-8fde96bfc1d3",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "4  Kenai River (late-run sockeye)  Sockeye  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "id": "77ac108b-6117-4177-ad2b-0f965296103f",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "max                40.0                             NaN      NaN  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "id": "480eb7d8-3a78-408f-9f66-da44930ca2d0",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
        "4  2024  July, 05 2024 00:00:00       18120"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "id": "bbfede76-faf1-4760-8e33-170804651c71",
    "metadata": {},
    "outputs": [],
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 7,
    "id": "a2259fc2-feb3-4bd5-bd7a-e6361571f585",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
        "0            NaN           NaN         NaN  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "id": "be3458dd-1d7b-4fc2-aaf0-0f72ef50997f",
    "metadata": {},
    "outputs": [],
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "id": "13b0cc67-c493-4aed-9e0b-52e8c9800d76",
    "metadata": {},
    "outputs": [
@@ -815,7 +815,7 @@
        "2015-01-05 00:00:00+00:00             A  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 10,
    "id": "df9e5000-c095-48f2-ba23-f47e47d1e064",
    "metadata": {},
    "outputs": [
@@ -908,7 +908,7 @@
        "4 2015-01-05 00:00:00+00:00             0.0             0.0              0.0"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "id": "0c593a65-dab1-4a30-b721-542c8b76b221",
    "metadata": {},
    "outputs": [
@@ -1020,7 +1020,7 @@
        "2015-01-05 00:00:00+00:00  15266300      2350.0          A, e"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "id": "434b20d0-3512-41e2-9530-5b0368b1628a",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
        "4 2015-01-05 00:00:00+00:00                2350.0"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "id": "0e72247a-7698-4500-9cf3-6cfebfb3a3b6",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1215,7 @@
        "4                2350.0  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
    "id": "59fd2c46-5f3d-485b-af66-b060865ee982",
    "metadata": {},
    "outputs": [],
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 15,
    "id": "233057d4-dae6-45c5-b093-b737756bb0bf",
    "metadata": {},
    "outputs": [],
@@ -1289,13 +1289,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 19,
    "id": "e1fad4fc-0acf-4b11-a599-6c173e35d25e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to retrieve and process NOAA data for a set date\n",
     "# If API request is successful, this function returns data in a list (which can be appended with a loop)\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
     "def fetch_daily_sea_levels(month_start):\n",
     "    # Format the start and end date for the API request\n",
     "    start_date_str = month_start.strftime('%Y%m%d')\n",
@@ -1312,9 +1315,10 @@
     "        noaa_json = noaa_response.json()\n",
     "        # Extract the water level data (for the current day)\n",
     "        for record in noaa_json['data']:\n",
+    "            sea_level_value = record['v']\n",
     "            data.append({\n",
     "                'timestamp': record['t'],\n",
-    "                'sea_level': float(record['v'])\n",
+    "                'sea_level': float(sea_level_value) if sea_level_value else np.nan # if/else is needed because some values are ''\n",
     "            })\n",
     "        return data\n",
     "    else:\n",
@@ -1324,20 +1328,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 20,
    "id": "efe18c10-a6f0-475b-a4b4-4e05c623b381",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[121], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m current_month \u001b[38;5;241m=\u001b[39m datetime(start_year, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m current_month \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m datetime(end_year, \u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m---> 12\u001b[0m     current_month_data \u001b[38;5;241m=\u001b[39m fetch_daily_sea_levels(current_month)\n\u001b[0;32m     13\u001b[0m     current_month_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(current_month_data)\n\u001b[0;32m     15\u001b[0m     current_month_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(current_month_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtimestamp\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "Cell \u001b[1;32mIn[120], line 21\u001b[0m, in \u001b[0;36mfetch_daily_sea_levels\u001b[1;34m(month_start)\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;66;03m# Extract the water level data (for the current day)\u001b[39;00m\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m record \u001b[38;5;129;01min\u001b[39;00m noaa_json[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[0;32m     19\u001b[0m         data\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m     20\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtimestamp\u001b[39m\u001b[38;5;124m'\u001b[39m: record[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[1;32m---> 21\u001b[0m             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msea_level\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;28mfloat\u001b[39m(record[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mv\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m     22\u001b[0m         })\n\u001b[0;32m     23\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m data\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2015-01-01 00:00:00\n",
+      "2015-02-01 00:00:00\n",
+      "2015-03-01 00:00:00\n",
+      "2015-04-01 00:00:00\n",
+      "2015-05-01 00:00:00\n",
+      "2015-06-01 00:00:00\n",
+      "2015-07-01 00:00:00\n",
+      "2015-08-01 00:00:00\n",
+      "2015-09-01 00:00:00\n",
+      "2015-10-01 00:00:00\n",
+      "2015-11-01 00:00:00\n",
+      "2015-12-01 00:00:00\n",
+      "2016-01-01 00:00:00\n",
+      "2016-02-01 00:00:00\n",
+      "2016-03-01 00:00:00\n",
+      "2016-04-01 00:00:00\n",
+      "2016-05-01 00:00:00\n",
+      "2016-06-01 00:00:00\n",
+      "2016-07-01 00:00:00\n",
+      "2016-08-01 00:00:00\n",
+      "2016-09-01 00:00:00\n",
+      "2016-10-01 00:00:00\n",
+      "2016-11-01 00:00:00\n",
+      "2016-12-01 00:00:00\n",
+      "2017-01-01 00:00:00\n",
+      "2017-02-01 00:00:00\n",
+      "2017-03-01 00:00:00\n",
+      "2017-04-01 00:00:00\n",
+      "2017-05-01 00:00:00\n",
+      "2017-06-01 00:00:00\n",
+      "2017-07-01 00:00:00\n",
+      "2017-08-01 00:00:00\n",
+      "2017-09-01 00:00:00\n",
+      "2017-10-01 00:00:00\n",
+      "2017-11-01 00:00:00\n",
+      "2017-12-01 00:00:00\n",
+      "2018-01-01 00:00:00\n",
+      "2018-02-01 00:00:00\n",
+      "2018-03-01 00:00:00\n",
+      "2018-04-01 00:00:00\n",
+      "2018-05-01 00:00:00\n",
+      "2018-06-01 00:00:00\n",
+      "2018-07-01 00:00:00\n",
+      "2018-08-01 00:00:00\n",
+      "2018-09-01 00:00:00\n",
+      "2018-10-01 00:00:00\n",
+      "2018-11-01 00:00:00\n",
+      "2018-12-01 00:00:00\n",
+      "2019-01-01 00:00:00\n",
+      "2019-02-01 00:00:00\n",
+      "2019-03-01 00:00:00\n",
+      "2019-04-01 00:00:00\n",
+      "2019-05-01 00:00:00\n",
+      "2019-06-01 00:00:00\n",
+      "2019-07-01 00:00:00\n",
+      "2019-08-01 00:00:00\n",
+      "2019-09-01 00:00:00\n",
+      "2019-10-01 00:00:00\n",
+      "2019-11-01 00:00:00\n",
+      "2019-12-01 00:00:00\n",
+      "2020-01-01 00:00:00\n",
+      "2020-02-01 00:00:00\n",
+      "2020-03-01 00:00:00\n",
+      "2020-04-01 00:00:00\n",
+      "2020-05-01 00:00:00\n",
+      "2020-06-01 00:00:00\n",
+      "2020-07-01 00:00:00\n",
+      "2020-08-01 00:00:00\n",
+      "2020-09-01 00:00:00\n",
+      "2020-10-01 00:00:00\n",
+      "2020-11-01 00:00:00\n",
+      "2020-12-01 00:00:00\n",
+      "2021-01-01 00:00:00\n",
+      "2021-02-01 00:00:00\n",
+      "2021-03-01 00:00:00\n",
+      "2021-04-01 00:00:00\n",
+      "2021-05-01 00:00:00\n",
+      "2021-06-01 00:00:00\n",
+      "2021-07-01 00:00:00\n",
+      "2021-08-01 00:00:00\n",
+      "2021-09-01 00:00:00\n",
+      "2021-10-01 00:00:00\n",
+      "2021-11-01 00:00:00\n",
+      "2021-12-01 00:00:00\n",
+      "2022-01-01 00:00:00\n",
+      "2022-02-01 00:00:00\n",
+      "2022-03-01 00:00:00\n",
+      "2022-04-01 00:00:00\n",
+      "2022-05-01 00:00:00\n",
+      "2022-06-01 00:00:00\n",
+      "2022-07-01 00:00:00\n",
+      "2022-08-01 00:00:00\n",
+      "2022-09-01 00:00:00\n",
+      "2022-10-01 00:00:00\n",
+      "2022-11-01 00:00:00\n",
+      "2022-12-01 00:00:00\n",
+      "2023-01-01 00:00:00\n",
+      "2023-02-01 00:00:00\n",
+      "2023-03-01 00:00:00\n",
+      "2023-04-01 00:00:00\n",
+      "2023-05-01 00:00:00\n",
+      "2023-06-01 00:00:00\n",
+      "2023-07-01 00:00:00\n",
+      "2023-08-01 00:00:00\n",
+      "2023-09-01 00:00:00\n",
+      "2023-10-01 00:00:00\n",
+      "2023-11-01 00:00:00\n",
+      "2023-12-01 00:00:00\n",
+      "2024-01-01 00:00:00\n",
+      "2024-02-01 00:00:00\n",
+      "2024-03-01 00:00:00\n",
+      "2024-04-01 00:00:00\n",
+      "2024-05-01 00:00:00\n",
+      "2024-06-01 00:00:00\n",
+      "2024-07-01 00:00:00\n",
+      "2024-08-01 00:00:00\n",
+      "2024-09-01 00:00:00\n",
+      "2024-10-01 00:00:00\n",
+      "2024-11-01 00:00:00\n",
+      "2024-12-01 00:00:00\n"
      ]
     }
    ],
@@ -1360,42 +1478,151 @@
     "    current_month_df = current_month_df.groupby(current_month_df['date'].dt.date)['sea_level'].agg(['min','max']).reset_index()\n",
     "    \n",
     "    sea_level_df = pd.concat([sea_level_df, current_month_df], ignore_index=True)\n",
+    "    # print(current_month) # DELETE THIS LINE AFTER DEBUGGING\n",
     "    current_month = current_month + pd.DateOffset(months=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "edc14b7f-9265-4ac3-a41c-531a5f27913d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sea_level_df.head()"
+    "sea_level_df['date'] = pd.to_datetime(sea_level_df['date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "19e38b98-2b5a-48db-b001-4d42d8034aa7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>49</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2020-07-22 05:52:39.183673344</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>2020-05-18 00:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2020-06-10 00:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2020-06-22 00:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2020-10-02 00:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2020-10-14 00:00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                date  min  max\n",
+       "count                             49  0.0  0.0\n",
+       "mean   2020-07-22 05:52:39.183673344  NaN  NaN\n",
+       "min              2020-05-18 00:00:00  NaN  NaN\n",
+       "25%              2020-06-10 00:00:00  NaN  NaN\n",
+       "50%              2020-06-22 00:00:00  NaN  NaN\n",
+       "75%              2020-10-02 00:00:00  NaN  NaN\n",
+       "max              2020-10-14 00:00:00  NaN  NaN\n",
+       "std                              NaN  NaN  NaN"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# missing data on 49 different days between 5/18/20 - 10/14/20\n",
+    "nan_rows = sea_level_df[sea_level_df.isna().any(axis=1)]\n",
+    "nan_rows.describe()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "348a8561-9e42-489d-8b7d-54875cb91c86",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "aa5ca4aa-5315-40cb-ac1a-cf2521015d8a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      3\u001b[0m sea_level_df\u001b[38;5;241m.\u001b[39mplot()\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "sea_level_df.plot()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1431,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "id": "53beb088-d262-4e1b-a760-5ce24c73f3f9",
    "metadata": {},
    "outputs": [],
@@ -1445,8 +1672,12 @@
     "fish_df.to_csv(folder_path + fish_file_name, index=False)\n",
     "\n",
     "# water temperature data\n",
-    "water_file_name = f'{start_year}-{end_year}_water_data_raw.csv'\n",
-    "water_df.to_csv(folder_path + water_file_name, index=False)"
+    "water_temp_file_name = f'{start_year}-{end_year}_water_temp_data_raw.csv'\n",
+    "water_df.to_csv(folder_path + water_temp_file_name, index=False)\n",
+    "\n",
+    "# sea level/tidal data\n",
+    "sea_level_file_name = f'{start_year}-{end_year}_sea_level_data_raw.csv'\n",
+    "sea_level_df.to_csv(folder_path + sea_level_file_name, index=False)"
    ]
   },
   {
@@ -1483,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "id": "f54f9ef5-b38c-48a1-ad90-b13db7daedf3",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "id": "5da20b57-493d-4c82-8a90-b2105a1f132d",
    "metadata": {},
    "outputs": [
